--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 
-# Created by https://www.gitignore.io/api/vim,macos,swift,xcode
+# Created by https://www.gitignore.io/api/vim,macos,swift,xcode,cocoapods
+
+### CocoaPods ###
+## CocoaPods GitIgnore Template
+
+# CocoaPods - Only use to conserve bandwidth / Save time on Pushing
+#           - Also handy if you have a large number of dependant pods
+#           - AS PER https://guides.cocoapods.org/using/using-cocoapods.html NEVER IGNORE THE LOCK FILE
+Pods/
 
 ### macOS ###
 *.DS_Store
@@ -117,4 +125,4 @@ tags
 /*.gcno
 
 
-# End of https://www.gitignore.io/api/vim,macos,swift,xcode
+# End of https://www.gitignore.io/api/vim,macos,swift,xcode,cocoapods
